add missing PDE directives for building
git-svn-id: http://svn.jboss.org/repos/jbosstools/trunk@36922 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/central/plugins/org.jboss.tools.community.central/build.properties
+++ b/central/plugins/org.jboss.tools.community.central/build.properties
@@ -7,3 +7,7 @@ bin.includes = META-INF/,\
                jboss_about.png,\
                plugin.xml,\
                icons/
+output.. = bin/
+source.. = src/
+src.includes = *
+src.excludes = src
