JBIDE-10230 more specific feature descriptions
git-svn-id: http://svn.jboss.org/repos/jbosstools/trunk@36968 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/examples/features/org.jboss.tools.project.examples.feature/feature.properties
+++ b/examples/features/org.jboss.tools.project.examples.feature/feature.properties
@@ -24,7 +24,7 @@ providerName=JBoss by Red Hat
 updateSiteName=JBossTools Update Site
 
 # "description" property - description of the feature
-description=Project Examples
+description=Project Examples provides infrastructure for installing, browsing and downloading project examples to learn about new functionallity.
 
 # "copyright" property - text of the "Feature Update Copyright"
 copyright=Copyright (c) 2008-2011 Red Hat, Inc. and others.\nAll rights reserved. This program and the accompanying materials\n 
