--- a/maven/features/org.jboss.tools.maven.feature/feature.properties
+++ b/maven/features/org.jboss.tools.maven.feature/feature.properties
@@ -24,7 +24,7 @@ providerName=JBoss by Red Hat
 updateSiteName=JBossTools Update Site
 
 # "description" property - description of the feature
-description=JBoss Maven Integration
+description=JBoss Maven Integration provides basis of the integration of m2e and JBoss Tools.
 
 # "copyright" property - text of the "Feature Update Copyright"
 copyright=Copyright (c) 2010-2011 Red Hat, Inc. and others.\n\
