--- a/maven/features/org.jboss.tools.maven.jaxrs.feature/feature.properties
+++ b/maven/features/org.jboss.tools.maven.jaxrs.feature/feature.properties
@@ -24,7 +24,7 @@ providerName=JBoss by Red Hat
 updateSiteName=JBossTools Update Site
 
 # "description" property - description of the feature
-description=JBoss Maven JAX-RS Integration
+description=JBoss Maven JAX-RS Integration configures and enables JAX-RS on your project based on your pom.xml via m2eclipse
 
 # "copyright" property - text of the "Feature Update Copyright"
 copyright=Copyright (c) 2010-2011 Red Hat, Inc. and others.\n\
