--- a/maven/features/org.jboss.tools.maven.portlet.feature/feature.properties
+++ b/maven/features/org.jboss.tools.maven.portlet.feature/feature.properties
@@ -24,7 +24,7 @@ providerName=JBoss by Red Hat
 updateSiteName=JBossTools Update Site
 
 # "description" property - description of the feature
-description=JBoss Maven Portlet Integration
+description=JBoss Maven Portlet Integration - enables JBoss Tools portlet support via m2eclipse on projects that uses Portlet API.
 
 # "copyright" property - text of the "Feature Update Copyright"
 copyright=Copyright (c) 2010-2011 Red Hat, Inc. and others.\n\
