--- a/examples/features/org.jboss.tools.community.project.examples.feature/feature.properties
+++ b/examples/features/org.jboss.tools.community.project.examples.feature/feature.properties
@@ -24,7 +24,7 @@ providerName=JBoss by Red Hat
 updateSiteName=JBossTools Update Site
 
 # "description" property - description of the feature
-description=JBoss Tools Community Project Examples
+description=JBoss Tools Community Project Examples - installs a set of project example sites for use in JBoss Tools.
 
 # "copyright" property - text of the "Feature Update Copyright"
 copyright=Copyright (c) 2008-2011 Red Hat, Inc. and others.\nAll rights reserved. This program and the accompanying materials\n 
