--- a/maven/features/org.jboss.tools.maven.jsf.feature/feature.properties
+++ b/maven/features/org.jboss.tools.maven.jsf.feature/feature.properties
@@ -24,7 +24,7 @@ providerName=JBoss by Red Hat
 updateSiteName=JBossTools Update Site
 
 # "description" property - description of the feature
-description=JBoss Maven Seam Integration
+description=JBoss Maven JSF Integration - configurator for m2eclipse which enables Eclipse WTP and JBoss Tools JSF support on Maven projects that uses JSF API
 
 # "copyright" property - text of the "Feature Update Copyright"
 copyright=Copyright (c) 2010-2011 Red Hat, Inc. and others.\n\
