https://issues.jboss.org/browse/JBIDE-10314 Back out "Seam 2" changes, reverting to just "Seam"
git-svn-id: http://svn.jboss.org/repos/jbosstools/trunk@36973 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/central/plugins/org.jboss.tools.central/plugin.xml
+++ b/central/plugins/org.jboss.tools.central/plugin.xml
@@ -138,7 +138,7 @@
       
       <command
       		defaultHandler="org.jboss.tools.central.actions.JBossSeamRuntimePreferencesHandler"
-            name="JBoss Seam 2 Runtime Preferences"
+            name="JBoss Seam Runtime Preferences"
             id="org.jboss.tools.seam.runtime.preferences">
       </command>
       
