https://issues.jboss.org/browse/JBDS-1945 simplify license wording for display on smaller screens
git-svn-id: http://svn.jboss.org/repos/jbosstools/trunk@37145 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/central/plugins/org.jboss.tools.central.discovery/plugin.xml
+++ b/central/plugins/org.jboss.tools.central.discovery/plugin.xml
@@ -338,7 +338,7 @@
             description="Tool support for the Spring Framework"
             id="org.springframework.ide.eclipse.feature"
             kind="task"
-            license="Free, Spring IDE Project Software User Agreement, EPL"
+            license="Free, EPL, Other"
             name="Spring IDE Core"
             provider="Spring IDE Developers"
             siteUrl="http://download.jboss.org/jbosstools/updates/indigo/extras/">
