https://issues.jboss.org/browse/JBDS-1957 add svnkit client adapter (which brings in jna, svnkit and generic adapter deps); tweak descriptions a little to make them display cleaner on small monitors
git-svn-id: http://svn.jboss.org/repos/jbosstools/trunk@37204 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/central/plugins/org.jboss.tools.central.discovery/plugin.xml
+++ b/central/plugins/org.jboss.tools.central.discovery/plugin.xml
@@ -175,12 +175,13 @@
             id="org.jboss.tools.central.discovery.scm"
             name="Source Control Management"
             relevance="60">
- 			<group id="bundled" /> 
- 			<group id="extra" />
+ 			<group id="org.jboss.tools.central.discovery.scm.git" /> 
+ 			<group id="org.jboss.tools.central.discovery.scm.svn" />
       </connectorCategory>
 
       <connectorDescriptor
             categoryId="org.jboss.tools.central.discovery.scm"
+            groupId="org.jboss.tools.central.discovery.scm.git"
             description="Eclipse Team Provider for the Git version control system"
             id="org.eclipse.egit"
             kind="task"
@@ -197,11 +198,29 @@
       </connectorDescriptor>
       <connectorDescriptor
             categoryId="org.jboss.tools.central.discovery.scm"
-            description="Eclipse Team Provider for the Subversion version control system"
+            groupId="org.jboss.tools.central.discovery.scm.svn"
+            description="Eclipse Team Provider for the Subversion version control system - Core [1/2]"
             id="org.tigris.subversion.subclipse"
             kind="task"
-            license="Free, Subclipse Software User Agreement"
-            name="Subclipse SVN Team Provider Core"
+            license="Free, Subclipse License"
+            name="Subclipse - Core"
+            provider="tigris.org"
+            siteUrl="http://download.jboss.org/jbosstools/updates/indigo/extras/">
+         <icon
+               image32="images/subclipse_32.gif">
+         </icon>
+         <overview
+               url="http://subclipse.tigris.org/">
+         </overview>
+      </connectorDescriptor>
+      <connectorDescriptor
+            categoryId="org.jboss.tools.central.discovery.scm"
+            groupId="org.jboss.tools.central.discovery.scm.svn"
+            description="Eclipse Team Provider for the Subversion version control system - SVNKit Adapter [2/2]"
+            id="org.tigris.subversion.clientadapter.svnkit.feature"
+            kind="task"
+            license="Free, Subclipse License"
+            name="Subclipse - SVNKit Adapter"
             provider="tigris.org"
             siteUrl="http://download.jboss.org/jbosstools/updates/indigo/extras/">
          <icon
@@ -262,7 +281,7 @@
             kind="task"
             license="Free, PMD License"
             name="PMD"
-            provider="PMD Development Team"
+            provider="PMD Developers"
             siteUrl="http://download.jboss.org/jbosstools/updates/indigo/extras/">
          <icon
                image32="images/pmd_32.png">
