--- a/central/plugins/org.jboss.tools.central.discovery/plugin.xml
+++ b/central/plugins/org.jboss.tools.central.discovery/plugin.xml
@@ -254,6 +254,10 @@
             name="JRebel"
             provider="zeroturnaround.org"
             siteUrl="http://www.zeroturnaround.com/update-site/">
+            <iu id="org.zeroturnaround.eclipse.nature.feature"/>
+            <iu id="org.zeroturnaround.eclipse.debug.feature"/>
+            <iu id="org.zeroturnaround.eclipse.wtp.feature"/>
+            <iu id="org.zeroturnaround.eclipse.embedder.feature"/>
          <icon
                image32="images/jrebel_32.png">
          </icon>
