apply patches JBDS1962.patch_v2.txt and JBDS1957.patch_v2.txt for JBDS-1962, JBDS-1957
git-svn-id: http://svn.jboss.org/repos/jbosstools/trunk@37233 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/central/plugins/org.jboss.tools.central.discovery/plugin.xml
+++ b/central/plugins/org.jboss.tools.central.discovery/plugin.xml
@@ -206,10 +206,8 @@
             name="Subclipse + SVNKit"
             provider="tigris.org"
             siteUrl="http://download.jboss.org/jbosstools/updates/indigo/extras/">
+            <iu id="org.tigris.subversion.subclipse"/>
             <iu id="org.tigris.subversion.clientadapter.svnkit.feature"/>
-            <iu id="com.sun.jna"/>
-            <iu id="org.tigris.subversion.clientadapter.feature"/>
-            <iu id="org.tmatesoft.svnkit"/>
          <icon
                image32="images/subclipse_32.gif">
          </icon>
@@ -254,6 +252,7 @@
             name="JRebel"
             provider="zeroturnaround.org"
             siteUrl="http://www.zeroturnaround.com/update-site/">
+            <iu id="org.zeroturnaround.eclipse.feature"/>
             <iu id="org.zeroturnaround.eclipse.nature.feature"/>
             <iu id="org.zeroturnaround.eclipse.debug.feature"/>
             <iu id="org.zeroturnaround.eclipse.wtp.feature"/>
