add other SpringIDE features to SpringIDE connector (JBDS-1966)
git-svn-id: http://svn.jboss.org/repos/jbosstools/trunk@37241 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/central/plugins/org.jboss.tools.central.discovery/plugin.xml
+++ b/central/plugins/org.jboss.tools.central.discovery/plugin.xml
@@ -348,9 +348,16 @@
             id="org.springframework.ide.eclipse.feature"
             kind="task"
             license="Free, EPL, Other"
-            name="Spring IDE Core"
+            name="Spring IDE"
             provider="Spring IDE Developers"
             siteUrl="http://download.jboss.org/jbosstools/updates/indigo/extras/">
+            <iu id="org.springframework.ide.eclipse.aop.feature"/>
+            <iu id="org.springframework.ide.eclipse.autowire.feature"/>
+            <iu id="org.springframework.ide.eclipse.feature"/>
+            <iu id="org.springframework.ide.eclipse.integration.feature"/>
+            <iu id="org.springframework.ide.eclipse.osgi.feature"/>
+            <iu id="org.springframework.ide.eclipse.webflow.feature"/>
+            <iu id="org.springframework.ide.eclipse.security.feature"/>
          <icon
                image32="images/springide_32.png">
          </icon>
