--- a/maven/docs/maven_reference_guide/pom.xml
+++ b/maven/docs/maven_reference_guide/pom.xml
@@ -1,153 +1,239 @@
-
+<?xml version="1.0" encoding="utf-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-
+	
 	<modelVersion>4.0.0</modelVersion>
-
 	<groupId>org.jboss.tools</groupId>
-	<artifactId>jboss-maven-integration-guide-${translation}</artifactId>
-	<version>1.0-SNAPSHOT</version>
+	<artifactId>${docname}-${translation}</artifactId>
+	<version>1.0</version>
 	<packaging>jdocbook</packaging>
-	<name>JBoss_Maven_Integration_Guide</name>
-
-	<profiles>
-		<profile>
-			<id>release</id>
-			<properties>
-				<master>master_output.xml</master>
-				<xsl-single>classpath:/xslt/com/jboss/tools/xhtml-single-release.xsl</xsl-single>
-				<xsl-chunked>classpath:/xslt/com/jboss/tools/xhtml-release.xsl</xsl-chunked>
-				<xsl-pdf>classpath:/xslt/com/jboss/tools/pdf.xsl</xsl-pdf>
-			</properties>
-		</profile>
-		<profile>
-			<id>releaseJBDS</id>
-			<properties>
-				<master>master_output.xml</master>
-				<xsl-single>classpath:/xslt/com/jboss/tools/xhtml-single-release.xsl</xsl-single>
-				<xsl-chunked>classpath:/xslt/com/jboss/tools/xhtml-release.xsl</xsl-chunked>
-				<xsl-pdf>classpath:/xslt/com/jboss/tools/pdf.xsl</xsl-pdf>
-				<cssdir>../../../documentation/jbosstools-jdocbook-style/src/main/com/css/</cssdir>
-			</properties>
-		</profile>
-		<profile>
-			<id>diffmk</id>
-			<properties>
-				<master>master_output.xml</master>
-				<xsl-single>classpath:/xslt/com/jboss/tools/xhtml-single-diff.xsl</xsl-single>
-				<xsl-chunked>classpath:/xslt/com/jboss/tools/xhtml-diff.xsl</xsl-chunked>
-				<xsl-pdf>classpath:/xslt/com/jboss/tools/pdf-diff.xsl</xsl-pdf>
-			</properties>
-		</profile>
-	</profiles>
-
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.jboss.maven.plugins</groupId>
-				<artifactId>maven-jdocbook-plugin</artifactId>
-				<version>2.3.4</version>
-				<extensions>true</extensions>
-
-				<dependencies>
-					<dependency>
-						<groupId>com.jboss</groupId>
-						<artifactId>jbossent-docbook-xslt</artifactId>
-						<version>1.0.0</version>
-					</dependency>
-					<dependency>
-						<groupId>com.jboss</groupId>
-						<artifactId>jbossent-jdocbook-style</artifactId>
-						<version>1.0.0</version>
-						<type>jdocbook-style</type>
-					</dependency>
-					<dependency>
-						<groupId>org.jboss</groupId>
-						<artifactId>jbossorg-docbook-xslt</artifactId>
-						<version>1.1.0</version>
-					</dependency>
-					<dependency>
-						<groupId>org.jboss</groupId>
-						<artifactId>jbossorg-jdocbook-style</artifactId>
-						<version>1.1.0</version>
-						<type>jdocbook-style</type>
-					</dependency>
-					<dependency>
-						<groupId>org.jboss.tools</groupId>
-						<artifactId>jbosstools-docbook-xslt</artifactId>
-						<version>1.0.0-SNAPSHOT</version>
-					</dependency>
-					<dependency>
-						<groupId>org.apache.xmlgraphics</groupId>
-						<artifactId>fop</artifactId>
-						<version>0.95</version>
-					</dependency>
-				</dependencies>
-
-				<configuration>
-					<sourceDocumentName>${master}</sourceDocumentName>
-					<sourceDirectory>${pom.basedir}/en-US</sourceDirectory>
-					<imageResource>
-						<directory>${pom.basedir}/en-US</directory>
-						<includes>
-							<include>images/**/*</include>
-						</includes>
-					</imageResource>
-					<cssResource>
-						<directory>${pom.basedir}/${cssdir}</directory>
-					</cssResource>
-
-					<formats>
-						<format>
-							<formatName>pdf</formatName>
-							<stylesheetResource>${xsl-pdf}</stylesheetResource>
-							<finalName>${pom.name}.pdf</finalName>
-						</format>
-						<format>
-							<formatName>html</formatName>
-							<stylesheetResource>${xsl-chunked}</stylesheetResource>
-							<finalName>index.html</finalName>
-						</format>
-						<format>
-							<formatName>html_single</formatName>
-							<stylesheetResource>${xsl-single}</stylesheetResource>
-							<finalName>index.html</finalName>
-						</format>
-						<format>
-							<formatName>eclipse</formatName>
-							<stylesheetResource>file:${pom.basedir}/${stylesdir}/xslt/com/jboss/tools/eclipse.xsl</stylesheetResource>
-							<finalName>index.html</finalName>
-						</format>
-					</formats>
-					<profile>
-						<id>release</id>
-						<properties>
-							<master>master_output.xml</master>
-							<xsl-single>classpath:/xslt/com/jboss/tools/xhtml-single-release.xsl</xsl-single>
-							<xsl-chunked>classpath:/xslt/com/jboss/tools/xhtml-release.xsl</xsl-chunked>
-							<xsl-pdf>classpath:/xslt/com/jboss/tools/pdf.xsl</xsl-pdf>
-						</properties>
-					</profile>
-
-					<options>
-						<xincludeSupported>true</xincludeSupported>
-						<xmlTransformerType>saxon</xmlTransformerType>
-                        <!-- needed for uri-resolvers; can be ommitted if using 'current' uri scheme -->
-                        <!--     could also locate the docbook dependency and inspect its version... -->
-						<docbookVersion>1.72.0</docbookVersion>
-						<useRelativeImageUris>true</useRelativeImageUris>
-					</options>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
+	<name>${bookname}-(${translation})</name>
 
 	<properties>
-		<stylesdir>../../../documentation/jbosstools-docbook-xslt/src/main/resources</stylesdir>
-		<xsl-single>classpath:/xslt/org/jboss/tools/xhtml-single.xsl</xsl-single>
-		<xsl-chunked>classpath:/xslt/org/jboss/tools/xhtml.xsl</xsl-chunked>
-		<xsl-pdf>classpath:/xslt/org/jboss/tools/pdf.xsl</xsl-pdf>
-		<cssdir>../../../documentation/jbosstools-jdocbook-style/src/main/org/css/</cssdir>
-		<master>master.xml</master>
 		<translation>en-US</translation>
+		<docname>Maven_Reference_Guide</docname>
+		<bookname>Maven_Reference_Guide</bookname>
 	</properties>
+
+	<profiles>
+
+    <!-- mvn compile -->
+		<profile>
+			<id>all</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.jboss.maven.plugins</groupId>
+						<artifactId>maven-jdocbook-plugin</artifactId>
+						<version>2.3.4</version>
+						<extensions>true</extensions>
+						<configuration>
+							<formats>
+								<format>
+									<formatName>pdf</formatName>
+									<stylesheetResource>classpath:/xslt/org/jboss/pdf.xsl</stylesheetResource>
+									<finalName>${docname}.pdf</finalName>
+								</format>
+								<format>
+									<formatName>html</formatName>
+									<stylesheetResource>classpath:/xslt/org/jboss/xhtml.xsl</stylesheetResource>
+									<finalName>index.html</finalName>
+								</format>
+								<format>
+									<formatName>html_single</formatName>
+									<stylesheetResource>classpath:/xslt/org/jboss/xhtml-single.xsl</stylesheetResource>
+									<finalName>index.html</finalName>
+								</format>
+								<format>
+									<formatName>eclipse</formatName>
+									<stylesheetResource>classpath:/xslt/org/jboss/eclipse.xsl</stylesheetResource>
+									<finalName>index.html</finalName>
+								</format>
+							</formats>
+							<options>
+								<useRelativeImageUris>true</useRelativeImageUris>
+							</options>							
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+
+    <!-- mvn compile -Phtml -->
+		<profile>
+			<id>html</id>
+			<activation>
+				<activeByDefault>false</activeByDefault>
+			</activation>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.jboss.maven.plugins</groupId>
+						<artifactId>maven-jdocbook-plugin</artifactId>
+						<version>2.3.3</version>
+						<extensions>true</extensions>
+						<configuration>
+							<formats>
+								<format>
+									<formatName>html</formatName>
+									<stylesheetResource>classpath:/xslt/org/jboss/xhtml.xsl</stylesheetResource>
+									<finalName>index.html</finalName>
+								</format>
+							</formats>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+
+    <!-- mvn compile -Phtml-single -->
+		<profile>
+			<id>html-single</id>
+			<activation>
+				<activeByDefault>false</activeByDefault>
+			</activation>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.jboss.maven.plugins</groupId>
+						<artifactId>maven-jdocbook-plugin</artifactId>
+						<version>2.3.3</version>
+						<extensions>true</extensions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+
+    <!-- mvn compile -Ppdf -->
+		<profile>
+			<id>pdf</id>
+			<activation>
+				<activeByDefault>false</activeByDefault>
+			</activation>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.jboss.maven.plugins</groupId>
+						<artifactId>maven-jdocbook-plugin</artifactId>
+						<version>2.3.3</version>
+						<extensions>true</extensions>
+						<configuration>
+							<formats>
+								<format>
+									<formatName>pdf</formatName>
+									<stylesheetResource>classpath:/xslt/org/jboss/pdf.xsl</stylesheetResource>
+									<finalName>${docname}.pdf</finalName>
+								</format>
+							</formats>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+
+	   <!-- mvn compile -Peclipse -->
+		<profile>
+			<id>eclipse</id>
+			<activation>
+				<activeByDefault>false</activeByDefault>
+			</activation>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.jboss.maven.plugins</groupId>
+						<artifactId>maven-jdocbook-plugin</artifactId>
+						<version>2.3.3</version>
+						<extensions>true</extensions>
+						<configuration>
+							<formats>
+								<format>
+									<formatName>eclipse</formatName>
+									<stylesheetResource>classpath:/xslt/org/jboss/eclipse.xsl</stylesheetResource>
+									<finalName>index.html</finalName>
+								</format>
+							</formats>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+
+	</profiles>
+	<build>
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>org.jboss.maven.plugins</groupId>
+					<artifactId>maven-jdocbook-plugin</artifactId>
+					<version>2.3.3</version>
+					<extensions>true</extensions>
+					<dependencies>
+						<dependency>
+							<groupId>org.jboss.pressgang</groupId>
+							<artifactId>pressgang-xslt</artifactId>
+							<version>1.2.0</version>
+						</dependency>
+						<dependency>
+							<groupId>org.jboss</groupId>
+							<artifactId>jbossorg-jdocbook-style</artifactId>
+							<version>1.1.1</version>
+							<type>jdocbook-style</type>
+						</dependency>
+					</dependencies>
+					<configuration>
+						<sourceDirectory>${project.basedir}</sourceDirectory>
+		             <!-- <sourceDocumentName>${docname}.xml</sourceDocumentName> -->
+						<sourceDocumentName>master.xml</sourceDocumentName>
+						<masterTranslation>en-US</masterTranslation>
+						<imageResource>
+							<directory>${project.basedir}/en-US</directory>
+							<includes>
+								<include>images/**/*</include>
+							</includes>
+						</imageResource>
+						<formats>
+							<format>
+								<formatName>pdf</formatName>
+								<stylesheetResource>classpath:/xslt/org/jboss/pdf.xsl</stylesheetResource>
+								<finalName>${pdf.name}</finalName>
+							</format>
+							<format>
+								<formatName>html</formatName>
+								<stylesheetResource>classpath:/xslt/org/jboss/xhtml.xsl</stylesheetResource>
+								<finalName>index.html</finalName>
+							</format>
+							<format>
+								<formatName>html_single</formatName>
+								<stylesheetResource>classpath:/xslt/org/jboss/xhtml-single.xsl</stylesheetResource>
+								<finalName>index.html</finalName>
+							</format>
+							<format>
+								<formatName>eclipse</formatName>
+								<stylesheetResource>classpath:/xslt/org/jboss/eclipse.xsl</stylesheetResource>
+								<finalName>index.html</finalName>
+							</format>
+						</formats>
+						<options>
+							<xincludeSupported>true</xincludeSupported>
+							<xmlTransformerType>saxon</xmlTransformerType>
+							<docbookVersion>1.72.0</docbookVersion>
+							<localeSeparator>-</localeSeparator>
+							<transformerParameters>
+								<property>
+									<name>javax.xml.parsers.DocumentBuilderFactory</name>
+									<value>org.apache.xerces.jaxp.DocumentBuilderFactoryImpl</value>
+								</property>
+								<property>
+									<name>javax.xml.parsers.SAXParserFactory</name>
+									<value>org.apache.xerces.jaxp.SAXParserFactoryImpl</value>
+								</property>
+							</transformerParameters>
+						</options>
+					</configuration>
+				</plugin>
+			</plugins>
+		</pluginManagement>
+	</build>
 </project>
