Better icon for JBoss Central https://issues.jboss.org/browse/JBIDE-10423
git-svn-id: http://svn.jboss.org/repos/jbosstools/trunk@37327 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/central/plugins/org.jboss.tools.central/plugin.xml
+++ b/central/plugins/org.jboss.tools.central/plugin.xml
@@ -9,7 +9,7 @@
          point="org.eclipse.ui.editors">
       <editor
             name="JBoss Central"
-            icon="icons/jboss.gif"
+            icon="icons/jboss.png"
             contributorClass="org.jboss.tools.central.editors.JBossCentralEditorContributor"
             class="org.jboss.tools.central.editors.JBossCentralEditor"
             id="org.jboss.tools.central.editors.JBossCentralEditor">
@@ -38,7 +38,7 @@
             locationURI="menu:help?before=group.intro">
             <command
                   commandId="org.jboss.tools.central.show"
-                  icon="icons/jboss.gif"
+                  icon="icons/jboss.png"
                   id="org.jboss.tools.central.show">
             </command>
       </menuContribution>
@@ -51,7 +51,7 @@
 				visible="true">
 			<action
 					class="org.jboss.tools.central.actions.ShowJBossCentralHandler"
-					icon="icons/jboss.gif"
+					icon="icons/jboss.png"
 					id="org.jboss.tools.central.actions.ShowJBossCentralHandler"
 					label="JBoss Central"
 					toolbarPath="org.eclipse.ui.workbench.help/group.application"
