--- a/maven/plugins/org.jboss.tools.maven.core/plugin.xml
+++ b/maven/plugins/org.jboss.tools.maven.core/plugin.xml
@@ -235,5 +235,10 @@
       		</enablement>
     	</provider>
   	</extension>
-  	
+
+    <extension point="org.eclipse.m2e.core.indexes">
+       <index indexId="jboss_releases" isShort="true" 
+              repositoryUrl="https://repository.jboss.org/nexus/content/repositories/releases/">
+       </index>
+    </extension>  	
 </plugin>
