--- a/maven/plugins/org.jboss.tools.maven.core/plugin.xml
+++ b/maven/plugins/org.jboss.tools.maven.core/plugin.xml
@@ -237,7 +237,7 @@
   	</extension>
 
     <extension point="org.eclipse.m2e.core.indexes">
-       <index indexId="jboss_releases" isShort="true" 
+       <index indexId="jboss-releases-repository" isShort="true" 
               repositoryUrl="https://repository.jboss.org/nexus/content/repositories/releases/">
        </index>
     </extension>  	
