JBIDE-10366 Add tests for JBoss Central
git-svn-id: http://svn.jboss.org/repos/jbosstools/trunk@37827 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/central/features/pom.xml
+++ b/central/features/pom.xml
@@ -16,6 +16,7 @@
 		<module>org.jboss.tools.central.feature</module>
 		<module>org.jboss.tools.central.discovery.feature</module>
 		<module>org.jboss.tools.community.central.feature</module>
+		<module>org.jboss.tools.central.test.feature</module>
 	</modules>
 </project>
 	
