--- a/central/pom.xml
+++ b/central/pom.xml
@@ -21,7 +21,7 @@
 	<modules>
 		<module>features</module>
 		<module>plugins</module>
-		<!--  <module>tests</module>  -->
+		<module>tests</module>
 		<module>site</module>
 	</modules>
 </project>
