JBIDE-10629 : Add a new "tag" attribute to Project Examples xml descriptors
git-svn-id: http://svn.jboss.org/repos/jbosstools/trunk@37858 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/examples/plugins/org.jboss.tools.community.project.examples/plugin.xml
+++ b/examples/plugins/org.jboss.tools.community.project.examples/plugin.xml
@@ -33,8 +33,7 @@
   <extension
         point="org.jboss.tools.project.examples.projectExamplesXml"
         name="%JBoss_Tools_33_Community_Maven_Examples">
-        <!-- TODO : rename to project-examples-maven-3.3.xml once M5 is out the door -->
-        <url>http://download.jboss.org/jbosstools/examples/project-examples-maven-3.3.M5.xml</url>
+        <url>http://download.jboss.org/jbosstools/examples/project-examples-maven-3.3.xml</url>
         <experimental>false</experimental>
   </extension>
 </plugin>
