--- a/maven/features/org.jboss.tools.maven.test.feature/feature.properties
+++ b/maven/features/org.jboss.tools.maven.test.feature/feature.properties
@@ -12,6 +12,15 @@ description=JBoss Tools - Tests - Maven
 # do not translate value - just change to point to a locale-specific HTML page
 licenseURL=license.html
 
+# "copyright" property - text of the "Feature Update Copyright"
+copyright=Copyright (c) 2010-2012 Red Hat, Inc. and others.\n\
+All rights reserved. This program and the accompanying materials\n\
+are made available under the terms of the Eclipse Public License v1.0\n\
+which accompanies this distribution, and is available at\n\
+http\://www.eclipse.org/legal/epl-v10.html\n\nContributors\:\n\
+JBoss by Red Hat - Initial implementation.
+############### end of copyright property ####################################
+
 # START NON-TRANSLATABLE
 # "license" property - text of the "Feature Update License"
 # should be plain text version of license agreement pointed to be "licenseURL"
