JBIDE-10789 : replace "Integration Seam projects with Maven" labels with "JBoss Maven Seam Configurator"
git-svn-id: http://svn.jboss.org/repos/jbosstools/trunk@38413 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/maven/plugins/org.jboss.tools.maven.seam/about.properties
+++ b/maven/plugins/org.jboss.tools.maven.seam/about.properties
@@ -1,2 +1,2 @@
-blurb=Integration Seam projects with Maven\n\nVersion\: {featureVersion}\n\n(c) Copyright (c) Red Hat, Inc., contributors and others 2004 - 2010.  All rights reserved.\nVisit http\://jboss.org/tools
+blurb=JBoss Maven Seam Configurator\n\nVersion\: {featureVersion}\n\n(c) Copyright (c) Red Hat, Inc., contributors and others 2004 - 2010.  All rights reserved.\nVisit http\://jboss.org/tools
 
