--- a/maven/plugins/org.jboss.tools.maven.seam/plugin.properties
+++ b/maven/plugins/org.jboss.tools.maven.seam/plugin.properties
@@ -1,5 +1,5 @@
 #Properties file for org.jboss.tools.maven.seam
 Bundle-Vendor = JBoss by Red Hat
-Bundle-Name = Integration Seam projects with Maven
+Bundle-Name = JBoss Maven Seam Configurator
 Seam_Project_configurator = Seam
 Fix_classpath = Fixing classpath
