JBIDE-10658 find place where description for category should live
git-svn-id: http://svn.jboss.org/repos/jbosstools/trunk@38432 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/examples/plugins/org.jboss.tools.community.project.examples/plugin.xml
+++ b/examples/plugins/org.jboss.tools.community.project.examples/plugin.xml
@@ -36,4 +36,10 @@
         <url>http://download.jboss.org/jbosstools/examples/project-examples-maven-3.3.xml</url>
         <experimental>false</experimental>
   </extension>
+  
+  <extension
+        point="org.jboss.tools.project.examples.categories"
+        name="Project Examples Categories">
+        <url>http://download.jboss.org/jbosstools/examples/project-examples-category-jbosstools-3.3.xml</url>
+    </extension>
 </plugin>
