JBIDE-10750 : add new JPA maven configurator
git-svn-id: http://svn.jboss.org/repos/jbosstools/trunk@38456 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/maven/plugins/pom.xml
+++ b/maven/plugins/pom.xml
@@ -23,6 +23,7 @@
 		<module>org.jboss.tools.maven.project.examples</module>
 		<module>org.jboss.tools.maven.jaxrs</module>
 		<module>org.jboss.tools.maven.jbosspackaging</module>
+        <module>org.jboss.tools.maven.jpa</module>
 	</modules>
 </project>
 	
