--- a/maven/features/pom.xml
+++ b/maven/features/pom.xml
@@ -23,6 +23,7 @@
 		<module>org.jboss.tools.maven.test.feature</module>
 		<module>org.jboss.tools.maven.jaxrs.feature</module>
 		<module>org.jboss.tools.maven.jbosspackaging.feature</module>	
-	</modules>
+		<module>org.jboss.tools.maven.jpa.feature</module>
+     </modules>
 </project>
 	
