--- a/central/plugins/org.jboss.tools.central/pom.xml
+++ b/central/plugins/org.jboss.tools.central/pom.xml
@@ -1,13 +1,100 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion> 
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.jboss.tools.central</groupId>
 		<artifactId>plugins</artifactId>
 		<version>1.0.0-SNAPSHOT</version>
 	</parent>
 	<groupId>org.jboss.tools.central.plugins</groupId>
-	<artifactId>org.jboss.tools.central</artifactId> 
-	
+	<artifactId>org.jboss.tools.central</artifactId>
+
+	<properties>
+		<!-- TODO: for GA, change this from /development/indigo/ to /stable/indigo/ -->
+		<jboss.discovery.directory.url>http://download.jboss.org/jbosstools/updates/development/indigo/jbosstools-directory.xml</jboss.discovery.directory.url>
+	</properties>
+
+	<!--  _stable_branch jobs could use this profile but the above default (last stable milestone) is probably better -->
+	<profiles>
+		<profile>
+			<id>3.3.indigo</id>
+			<activation>
+				<activeByDefault>false</activeByDefault>
+			</activation>
+			<properties>
+				<jboss.discovery.directory.url>http://download.jboss.org/jbosstools/updates/nightly/core/3.3.indigo/jbosstools-directory.xml</jboss.discovery.directory.url>
+			</properties>
+		</profile>
+	</profiles>
+
+	<!-- _trunk jobs should use this profile -->
+	<profiles>
+		<profile>
+			<id>trunk</id>
+			<activation>
+				<activeByDefault>false</activeByDefault>
+			</activation>
+			<properties>
+				<jboss.discovery.directory.url>http://download.jboss.org/jbosstools/updates/nightly/core/trunk/jbosstools-directory.xml</jboss.discovery.directory.url>
+			</properties>
+		</profile>
+	</profiles>
+
 	<packaging>eclipse-plugin</packaging>
+	<build>
+		<plugins>
+			<!-- This will copy from the source folder to the template folder. Use only if no filtering/replacement has already been done in source folder 
+			<plugin>
+				<artifactId>maven-resources-plugin</artifactId>
+				<version>2.5</version>
+				<executions>
+					<execution>
+						<id>copy-resources</id>
+						<phase>validate</phase>
+						<goals>
+							<goal>copy-resources</goal>
+						</goals>
+						<configuration>
+							<outputDirectory>${basedir}/template/</outputDirectory>
+							<resources>
+								<resource>
+									<directory>src/org/jboss/tools/central/configurators/</directory>
+									<includes>
+										<include>**/DefaultJBossCentralConfigurator.java</include>
+									</includes>
+									<filtering>true</filtering>
+								</resource>
+							</resources>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin> -->
+			<plugin>
+				<artifactId>maven-resources-plugin</artifactId>
+				<version>2.5</version>
+				<executions>
+					<execution>
+						<id>copy-resources</id>
+						<phase>validate</phase>
+						<goals>
+							<goal>copy-resources</goal>
+						</goals>
+						<configuration>
+							<outputDirectory>${basedir}/src/org/jboss/tools/central/configurators/</outputDirectory>
+							<resources>
+								<resource>
+									<directory>template/</directory>
+									<includes>
+										<include>**/DefaultJBossCentralConfigurator.java</include>
+									</includes>
+									<filtering>true</filtering>
+								</resource>
+							</resources>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
 </project>
