--- a/maven/features/pom.xml
+++ b/maven/features/pom.xml
@@ -24,6 +24,7 @@
 		<module>org.jboss.tools.maven.jaxrs.feature</module>
 		<module>org.jboss.tools.maven.jbosspackaging.feature</module>	
 		<module>org.jboss.tools.maven.jpa.feature</module>
+		<module>org.jboss.tools.maven.profiles.feature</module>        
      </modules>
 </project>
 	
