--- a/maven/plugins/org.jboss.tools.maven.profiles.ui/build.properties
+++ b/maven/plugins/org.jboss.tools.maven.profiles.ui/build.properties
@@ -1,5 +1,5 @@
 source.. = src/
-output.. = bin/
+output.. = target/classes/
 bin.includes = META-INF/,\
                .,\
                plugin.xml,\
@@ -8,4 +8,5 @@ bin.includes = META-INF/,\
                about.mappings,\
                about.ini,\
                about.html,\
-               plugin.properties
+               plugin.properties,\
+               icons/
