--- a/maven/plugins/pom.xml
+++ b/maven/plugins/pom.xml
@@ -24,6 +24,8 @@
 		<module>org.jboss.tools.maven.jaxrs</module>
 		<module>org.jboss.tools.maven.jbosspackaging</module>
         <module>org.jboss.tools.maven.jpa</module>
+		<module>org.jboss.tools.maven.profiles.core</module>        
+		<module>org.jboss.tools.maven.profiles.ui</module>        
 	</modules>
 </project>
 	
