JBIDE-10750 : add 2ndary configurator to wtp
git-svn-id: http://svn.jboss.org/repos/jbosstools/trunk@38666 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/maven/plugins/org.jboss.tools.maven.jpa/plugin.properties
+++ b/maven/plugins/org.jboss.tools.maven.jpa/plugin.properties
@@ -1,4 +1,4 @@
 Bundle-Vendor = JBoss by Red Hat
 Bundle-Name = JBoss Maven JPA Configurator
-jpa_project_configurator = JPA
-
+jpa_project_configurator = JPA configurator for JDT projects
+jpa_project_configurator_wtp = JPA configurator for WTP projects
