JBIDE-10264 Wizard-ify the project examples
git-svn-id: http://svn.jboss.org/repos/jbosstools/trunk@38784 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/examples/plugins/org.jboss.tools.project.examples/build.properties
+++ b/examples/plugins/org.jboss.tools.project.examples/build.properties
@@ -12,4 +12,5 @@ bin.includes = META-INF/,\
                about.properties,\
                rhds_wiz.png,\
                schema/,\
-               jboss_about.png
+               jboss_about.png,\
+               OSGI-INF/
