--- a/examples/plugins/org.jboss.tools.project.examples/plugin.xml
+++ b/examples/plugins/org.jboss.tools.project.examples/plugin.xml
@@ -77,8 +77,8 @@
    
     <extension
         point="org.jboss.tools.project.examples.projectExamplesXml"
-        name="Java EE Archetypes">
-        <url>http://download.jboss.org/jbosstools/examples/project-examples-shared-3.3.xml</url>
+        name="Shared examples">
+        <url>http://download.jboss.org/jbosstools/examples/project-examples-shared-3.3.Beta1.xml</url>
         <experimental>false</experimental>
     </extension>
     
