JBIDE-10762 : cleaned up mavenification of projects, added JSF 2.0 maven library provider
git-svn-id: http://svn.jboss.org/repos/jbosstools/trunk@38840 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/maven/plugins/org.jboss.tools.maven.core/plugin.properties
+++ b/maven/plugins/org.jboss.tools.maven.core/plugin.properties
@@ -6,6 +6,7 @@ Adds_support_for_Maven=Adds support for Maven.
 Maven_library_provider=Maven library provider
 Maven_JSF_1_2_Libraries=Maven JSF 1.2 Libraries
 Maven_JSF_1_1_Libraries=Maven JSF 1.1 Libraries
+Maven_JSF_2_0_Libraries=Maven JSF 2.0 Libraries
 Hibernate_3_3_2_Libraries=Hibernate 3.3.2 Libraries
 Maven_Portlet_1_0_Libraries=Maven Portlet 1.0 Libraries
 Maven_Portlet_2_0_Libraries=Maven Portlet 2.0 Libraries
