--- a/examples/plugins/org.jboss.tools.project.examples/plugin.xml
+++ b/examples/plugins/org.jboss.tools.project.examples/plugin.xml
@@ -91,6 +91,12 @@
     <extension
          point="org.jboss.tools.project.examples.downloadruntimes">
       <runtime
+            id="org.jboss.tools.runtime.core.as.710" 
+            name="JBoss AS 7.1.0 Certified Java EE 6 Full Profile"
+            version="7.1.0.Final"
+            size="100MB"
+            url="http://download.jboss.org/jbossas/7.1/jboss-as-7.1.0.Final/jboss-as-7.1.0.Final.zip?use_mirror=autoselect"/>
+      <runtime
             id="org.jboss.tools.runtime.core.as.701" 
             name="JBoss AS 7.0.1 Everything (NOT Java EE6 Certified)"
             version="7.0.1.Final"
