--- a/examples/plugins/org.jboss.tools.project.examples/plugin.xml
+++ b/examples/plugins/org.jboss.tools.project.examples/plugin.xml
@@ -95,44 +95,51 @@
             name="JBoss AS 7.1.0 Certified Java EE 6 Full Profile"
             version="7.1.0.Final"
             size="100MB"
-            url="http://download.jboss.org/jbossas/7.1/jboss-as-7.1.0.Final/jboss-as-7.1.0.Final.zip?use_mirror=autoselect"/>
+            url="http://download.jboss.org/jbossas/7.1/jboss-as-7.1.0.Final/jboss-as-7.1.0.Final.zip?use_mirror=autoselect"
+            disclaimer="true"/>
       <runtime
             id="org.jboss.tools.runtime.core.as.701" 
             name="JBoss AS 7.0.1 Everything (NOT Java EE6 Certified)"
             version="7.0.1.Final"
             size="74MB"
-            url="http://download.jboss.org/jbossas/7.0/jboss-as-7.0.1.Final/jboss-as-7.0.1.Final.zip?use_mirror=autoselect"/>
+            url="http://download.jboss.org/jbossas/7.0/jboss-as-7.0.1.Final/jboss-as-7.0.1.Final.zip?use_mirror=autoselect"
+            disclaimer="true"/>
       <runtime
             id="org.jboss.tools.runtime.core.as.702" 
             name="JBoss AS 7.0.2 Everything (NOT Java EE6 Certified)"
             version="7.0.2.Final"
             size="75MB"
-            url="http://download.jboss.org/jbossas/7.0/jboss-as-7.0.2.Final/jboss-as-7.0.2.Final.zip?use_mirror=autoselect"/>
+            url="http://download.jboss.org/jbossas/7.0/jboss-as-7.0.2.Final/jboss-as-7.0.2.Final.zip?use_mirror=autoselect"
+            disclaimer="true"/>
       <runtime
             id="org.jboss.tools.runtime.core.seam.222" 
             name="JBoss Seam 2.2.2.Final"
             version="2.2.2.Final"
             size="113.2MB"
-            url="http://sourceforge.net/projects/jboss/files/JBoss%20Seam/2.2.2.Final/jboss-seam-2.2.2.Final.zip?use_mirror=autoselect"/>
+            url="http://sourceforge.net/projects/jboss/files/JBoss%20Seam/2.2.2.Final/jboss-seam-2.2.2.Final.zip?use_mirror=autoselect"
+            disclaimer="true"/>
       <runtime
             id="org.jboss.tools.runtime.core.seam.202" 
             name="JBoss Seam 2.0.2.SP1"
             version="2.0.2.SP1"
             size="92.3MB"
-            url="http://sourceforge.net/projects/jboss/files/JBoss%20Seam/2.0.2.SP1/jboss-seam-2.0.2.SP1.zip?use_mirror=autoselect"/>
+            url="http://sourceforge.net/projects/jboss/files/JBoss%20Seam/2.0.2.SP1/jboss-seam-2.0.2.SP1.zip?use_mirror=autoselect"
+            disclaimer="true"/>
       
       <runtime
             id="org.jboss.tools.runtime.core.as.610" 
             name="JBoss AS 6.1.0"
             version="6.1.0.Final"
             size="183MB"
-            url="http://download.jboss.org/jbossas/6.1/jboss-as-distribution-6.1.0.Final.zip?use_mirror=autoselect"/>
+            url="http://download.jboss.org/jbossas/6.1/jboss-as-distribution-6.1.0.Final.zip?use_mirror=autoselect"
+            disclaimer="true"/>
       <runtime
             id="org.jboss.tools.runtime.core.as.423" 
             name="JBoss AS 4.2.3"
             version="4.2.3"
             size="100MB"
-            url="http://sourceforge.net/projects/jboss/files/JBoss/JBoss-4.2.3.GA/jboss-4.2.3.GA-jdk6.zip?use_mirror=autoselect"/>
+            url="http://sourceforge.net/projects/jboss/files/JBoss/JBoss-4.2.3.GA/jboss-4.2.3.GA-jdk6.zip?use_mirror=autoselect"
+            disclaimer="true"/>
       
    </extension>
    
