https://issues.jboss.org/browse/JBIDE-10965 add JSLint to JBT central
git-svn-id: http://svn.jboss.org/repos/jbosstools/trunk@38917 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/central/plugins/org.jboss.tools.central.discovery/plugin.xml
+++ b/central/plugins/org.jboss.tools.central.discovery/plugin.xml
@@ -266,6 +266,27 @@
       </connectorDescriptor>
       <connectorDescriptor
             categoryId="org.jboss.tools.central.discovery.testing"
+            description="Tool support for JSLint"
+            id="com.rockstarapps.workbench.branding.feature"
+            kind="task"
+            license="Free, ASL"
+            name="JSLint"
+            provider="Rockstarapps.com"
+            siteUrl="http://download.jboss.org/jbosstools/updates/indigo/extras/">
+            <iu id="com.rockstarapps.aws.feature"/>
+			<iu id="com.rockstarapps.html.core.feature"/>
+			<iu id="com.rockstarapps.jsLex"/>
+			<iu id="com.rockstarapps.jsLint"/>
+			<iu id="com.rockstarapps.workbench.branding.feature"/>
+         <icon
+               image32="images/jslint_32.png">
+         </icon>
+         <overview
+               url="http://www.jslint.com/">
+         </overview>
+      </connectorDescriptor>
+      <connectorDescriptor
+            categoryId="org.jboss.tools.central.discovery.testing"
             description="Tool support for PMD"
             id="net.sourceforge.pmd.eclipse"
             kind="task"
